使用过滤器实现登录验证操作，出登陆页面之外所有资源的访问都需要被过滤器所拦截，过滤器获取不到登录名时强制转到登录页面，获取到登录名后，将请求交给servlet，servlet对用户名和密码进行验证，验证通过转到主页，不通过转到登录错误页面提示密码错误信息
下一步将对session进行控制，希望实现登出操作，同时要美化界面

--- a/head_first/WebRoot/loginError.html
+++ b/head_first/WebRoot/loginError.html
@@ -12,6 +12,7 @@
   </head>
   
   <body>
-    Sorry,dude, your password isn't right.<br>
+    Sorry,dude, your password or username isn't right.<br>
+    <li><a href="login.jsp">返回登录界面</a></li>
   </body>
 </html>
