处理了找不到success返回值的bug

--- a/struts2_ln/web/html/CRUD.html
+++ b/struts2_ln/web/html/CRUD.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 这个页面通过在struts配置文件中配置method属性，调用一个action中的不同方法
-<form action="add.action" method="get">
+<form action="../aa/add.action" method="get">
     <button type="submit">增</button>
 </form><br>
-<form action="delete.action" method="get">
+<form action="../aa/delete.action" method="get">
     <button type="submit">删</button>
 </form><br>
-<form action="update.action" method="get">
+<form action="../aa/update.action" method="get">
     <button type="submit">改</button>
 </form><br>
-<form action="query.action" method="get">
+<form action="../aa/query.action" method="get">
     <button type="submit">查</button>
 </form><br>
 </body>
